--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "your-editor",
   "version": "0.1.0",
+  "homepage": "https://suhaibaziz.github.io/code-editor/",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
@@ -22,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy" : "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
